--- a/src/app.css
+++ b/src/app.css
@@ -16,17 +16,33 @@ h1 {
   font-style: italic;
 }
 
-
-.grid-container {
+/* .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
   grid-gap: 10px;
-  /* background-color: #2196F3; */
+  background-color: #2196F3;
   padding: 10px;
-}
+} */
 
 .grid-container > div {
-  /* background-color: rgba(255, 255, 255, 0.8); */
+  background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
-  /* font-size: 30px; */
+  font-size: 30px;
+}
+
+.container-2 {
+  /* background: gray none repeat scroll 0 0; */
+  display: flex;
+  flex-flow: row wrap;
+  position: relative;
+  width: auto;
+}
+
+.item {
+  /* background: blue none repeat scroll 0 0; */
+  flex: 1 1 20%;
+  height: auto;
+  margin: 4px;
+  padding: 10px 0;
+  width: auto;
 }
